# obslab-composite-srg

./: Makefile  README.md  pyproject.toml
.github/workflows/: push_action.yml
SRGs/: 01-individual-service-srg.json  02-composite-srg.json  README.md
composite_srg_pipeline/: README.md  __init__.py  config.py
composite_srg_pipeline/dt_api/: __init__.py  authentication.py  executions.py  workflows.py
composite_srg_pipeline/exceptions/: __init__.py
composite_srg_pipeline/models/: dt_automation.py  dt_enums.py  oauth_access_token.py
dashboard/: README.md  SRG_Application_Status_Dashboard.json
workflows/: 01-GenerateSLOs-and-metrics.yaml  02-Execute-SRGs.yaml  README.md
