[tool.poetry]
name = "composite-srg-pipeline"
version = "0.1.0"
description = ""
authors = ["Switalski, Stanley <stanley.switalski@dynatrace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
authlib = "^1.3.2"
loguru = "^0.7.2"
retry = "^0.9.2"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.26.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
